--- a/demo.html
+++ b/demo.html
@@ -8,10 +8,11 @@
 <body>
 <!-- For output results -->
 <pre id="response"></pre>
-
+<!--<div id="container">-->
 <video id="livevideo" autoplay></video>
 <canvas id="overlaycanvas"></canvas>
 <div id="facebox"></div>
+
 
 <!-- Import libraries -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
